Added a helpful link
Have added a helpful link to Scaler topics about the Inheritance in appendix section.

--- a/delegation-pattern.html
+++ b/delegation-pattern.html
@@ -300,6 +300,7 @@ monitor.display();  // Something colourful
 <li><a href="https://stackoverflow.com/questions/49002/prefer-composition-over-inheritance">Stackoverflow - Prefer composition over inheritance?</a></li>
 <li><a href="https://hk.answers.yahoo.com/question/index?qid=20051111000014KK12421">Yahoo知識+ - 請問，為什麼要『多用合成，少用繼承』? (java程式語言)</a></li>
 <li><a href="https://www.ptt.cc/bbs/OOAD/M.1394957520.A.63D.html">PTT - Re: 多用合成，少用繼承</a></li>
+<li><a href="https://www.scaler.com/topics/java/inheritance-in-java/">Scaler topics - Inheritance in Java</a></li>
 </ul>
 
 
